# TCPFileSender

./: .gitignore  CMakeLists.txt
old/: tcpClient.c  tcpServer.c
src/: client.cpp  server.cpp  tcpFileClient.cpp  tcpFileClient.hpp  tcpFileProtocol.hpp  tcpFileServer.cpp  tcpFileServer.hpp  tcpTestClient.cpp  tcpTestServer.cpp  timeUtil.cpp  timeUtil.hpp
tcp/: tcp.cpp  tcp.h  tcpClient.cpp  tcpError.cpp  tcpHolder.cpp  tcpServer.cpp
v2/: tcpFileClient.cpp  tcpFileServer.cpp
